# turn-signal-flasher-6V

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app.c  app.h  avr.c  avr.h  logic.c  logic.h  main.c
kicad/: turn-signal-flasher-6V.kicad_pcb  turn-signal-flasher-6V.kicad_prl  turn-signal-flasher-6V.kicad_pro  turn-signal-flasher-6V.kicad_sch
kicad/manufacturing/: turn-signal-flasher-6V-B_Cu.gbl  turn-signal-flasher-6V-B_Mask.gbs  turn-signal-flasher-6V-B_Silkscreen.gbo  turn-signal-flasher-6V-Edge_Cuts.gm1  turn-signal-flasher-6V-F_Cu.gtl  turn-signal-flasher-6V-F_Mask.gts  turn-signal-flasher-6V-F_Silkscreen.gto  turn-signal-flasher-6V-NPTH.drl  turn-signal-flasher-6V-PTH.drl
test/: app_tc.c  avr_mock.c  logic_tc.c
